finish implementing getManyAccounts
